--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -6,7 +6,7 @@ receivers:
 
 exporters:
   prometheusremotewrite:
-    endpoint: "http://mimir:9009/api/v1/push"
+    endpoint: "http://prometheus:9090/api/v1/push"
 
 service:
   pipelines:
