--- a/python-server/Dockerfile
+++ b/python-server/Dockerfile
@@ -3,4 +3,4 @@ FROM python:3.13
 WORKDIR /app
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "server.py"]
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
