--- a/rust-server/Cargo.toml
+++ b/rust-server/Cargo.toml
@@ -4,7 +4,7 @@ edition = "2021"
 
 [dependencies]
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
 tracing-opentelemetry = "0.22"
 opentelemetry = { version = "0.21", features = ["trace"] }
 opentelemetry-otlp = { version = "0.14", features = ["http-proto", "trace"] }
@@ -12,3 +12,6 @@ pyroscope = "0.5.8"
 pyroscope_pprofrs = "0.2"
 actix-web = "4"
 env_logger = "0.11.8"
+serde = "1.0.219"
+tokio = "1.44.2"
+futures-util = "0.3"
