workon rust, tempo

--- a/rust-server/Dockerfile
+++ b/rust-server/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /usr/src/app
 COPY . .
 RUN cargo build --release
 
-FROM debian:bullseye-slim
+FROM debian:bookworm-slim
 WORKDIR /usr/src/app
 COPY --from=builder /usr/src/app/target/release/rust-server /usr/src/app/rust-server
 EXPOSE 8001
